# Tasker

./: CHANGELOG.md  Cargo.toml  README.md
src/: global_settings.rs  main.rs  parse.rs
src/tasks/: errors.rs  mod.rs  modify.rs  task.rs  view.rs
