[package]
name = "tasker"
version = "0.1.0"
authors = ["Mark Jones <markjonestx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
dirs = "3.0"
serde_json = "1.0"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["color", "suggestions"]

[dependencies.chrono]
default-features = false
features = ["alloc", "std", "clock"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
